--- a/.github/workflows/plugin-bot.yml
+++ b/.github/workflows/plugin-bot.yml
@@ -1,25 +1,34 @@
 name: Plugin Status Bot
 on:
   schedule:
-    # Ogni 5 giorni alle 10:00 (Italia)
     - cron: '0 9 */5 * *'
-  workflow_dispatch:  # Solo avvio manuale da UI GitHub
+  workflow_dispatch:
 
 jobs:
   send-report:
     runs-on: ubuntu-latest
     
     steps:
+    # UNICO checkout: MASTER (dove ci sono gli script)
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        ref: builds  # Legge sempre dal branch builds
+        ref: master  # ← CAMBIA DA builds A master
     
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
     
+    - name: Download plugins.json da builds
+      run: |
+        curl -L -o plugins.json \
+          "https://raw.githubusercontent.com/DieGon7771/ItaliaInStreaming/builds/plugins.json"
+        
+        echo "📄 plugins.json scaricato:"
+        head -5 plugins.json
+    
+    # Il resto RIMANE UGUALE
     - name: Leggi plugins.json
       run: python scripts/check_plugins.py
     
@@ -30,6 +39,4 @@ jobs:
       env:
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
         TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        REPO_URL: ${{ github.repository }}
-      run: |
-        python scripts/send_telegram.py
+      run: python scripts/send_telegram.py
