--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,18 @@
 name: Build
 
-# https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#concurrency
 concurrency: 
   group: "build"
   cancel-in-progress: true
 
 on:
-  workflow_dispatch:  # Allows manual triggering
- # push:
-   # branches:
-      # choose your default branch
-     # - master
-     # - main
-   # paths-ignore:
-     # - '*.md'
-     # - '*.png'
-     # - '*.yml'
+  workflow_dispatch:
+  push:
+    branches:
+      - master
+    paths-ignore:
+      - '*.md'
+      - '*.png'
+      - '*.yml'
 
 jobs:
   build:
@@ -65,5 +62,5 @@ jobs:
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
           git add .
-          git commit --amend -m "Build $GITHUB_SHA" || exit 0   # do not error if nothing to commit
+          git commit --amend -m "Build $GITHUB_SHA" || exit 0
           git push --force
